--- a/gr122_overview.html
+++ b/gr122_overview.html
@@ -14,7 +14,7 @@
     <section class="section">
         <div class="columns">
             <div class="column">
-                <h1 class="title is-1">GR122 (Ieper - Damme)</h1>
+                <h1 class="title is-1">GR122 (Hulst - Ronse)</h1>
 
                 <h1 class="title is-2">Map of paved type</h1>
                 <iframe src="gr122_paved_detail.html" title="more" width="700" height="500"></iframe>
