moved maps into folder

--- a/gr134_overview.html
+++ b/gr134_overview.html
@@ -17,13 +17,13 @@
                 <h1 class="title is-1">GR131 (Damme - Ieper)</h1>
 
                 <h1 class="title is-2">Map of paved type</h1>
-                <iframe src="gr131_paved_detail.html" title="more" width="700" height="500"></iframe>
+                <iframe src="maps/gr131_paved_detail.html" title="more" width="700" height="500"></iframe>
 
                 <h1 class="title is-2">Map of traffic type</h1>
-                <iframe src="gr131_traffic.html" title="help" width="700" height="500"></iframe>
+                <iframe src="maps/gr131_traffic.html" title="help" width="700" height="500"></iframe>
 
                 <h1 class="title is-2">Map of development type</h1>
-                <iframe src="gr131_development.html" title="alt" width="700" height="500"></iframe>
+                <iframe src="maps/gr131_development.html" title="alt" width="700" height="500"></iframe>
 
             </div>
         </div>
