added section plots

--- a/gr564_overview.html
+++ b/gr564_overview.html
@@ -13,7 +13,7 @@
     <!-- Introductory section -->
     <section class="section">
         <div class="columns">
-            <div class="column">
+            <div class="column is-one-third">
                 <h1 class="title is-1">GR564 (Lommel - Huy)</h1>
 
                 <h1 class="title is-2">Map of paved type</h1>
@@ -24,6 +24,10 @@
 
                 <h1 class="title is-2">Map of development type</h1>
                 <iframe src="maps/gr564_development.html" title="alt" width="700" height="500"></iframe>
+
+                <figure class="image">
+                    <img src="images/gr564_sections.jpg" alt="">
+                </figure>
 
             </div>
         </div>
