made route pages responsive

--- a/gr131_overview.html
+++ b/gr131_overview.html
@@ -10,21 +10,46 @@
 </head>
 
 <body>
-    <!-- Introductory section -->
     <section class="section">
         <div class="columns">
-            <div class="column is-one-third">
-                <h1 class="title is-1">GR131 (Damme - Ieper)</h1>
+            <div class="column is-6-fullhd        is-8-widescreen        is-8-desktop        is-10-tablet         is-12-mobile
+                               is-offset-3-fullhd is-offset-2-widescreen is-offset-2-desktop is-offset-1-tablet">
 
-                <h1 class="title is-2">Map of paved type</h1>
-                <iframe src="maps/gr131_paved_detail.html" title="more" width="700" height="500"></iframe>
+                <!-- Title -->
+                <h1 class="title has-text-centered
+                           is-size-1-fullhd is-size-1-widescreen is-size-2-desktop is-size-3-tablet is-size-4-mobile">
+                    GR131 (Damme - Ieper)
+                </h1>
 
-                <h1 class="title is-2">Map of traffic type</h1>
-                <iframe src="maps/gr131_traffic.html" title="help" width="700" height="500"></iframe>
+                <!-- Paved type -->
+                <h2 class="title has-text-centered
+                           is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                    Paving type along the route (unpaved/semipaved/paved)</h2>
+                <figure class="image is-16by9 mb-4">
+                    <iframe class="has-ratio" src="maps/gr131_paved_detail.html" title="Paved type of GR131"></iframe>
+                </figure>
 
-                <h1 class="title is-2">Map of development type</h1>
-                <iframe src="maps/gr131_development.html" title="alt" width="700" height="500"></iframe>
+                <!-- Traffic type -->
+                <h2 class="title has-text-centered
+                           is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                    Traffic type along the route (slow/normal/busy)</h2>
+                <figure class="image is-16by9 mb-4">
+                    <iframe class="has-ratio" src="maps/gr131_traffic.html" title="Traffic type of GR131"></iframe>
+                </figure>
 
+                <!-- Development type type -->
+                <h2 class="title has-text-centered
+                           is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                    Development type along the route (light/heavy)</h2>
+                <figure class="image is-16by9 mb-4">
+                    <iframe class="has-ratio" src="maps/gr131_development.html"
+                        title="Development type of GR131"></iframe>
+                </figure>
+
+                <!-- Section plots -->
+                <h2 class="title has-text-centered
+                           is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                    Section plots of the route</h2>
                 <figure class="image">
                     <img src="images/gr131_sections.jpg" alt="">
                 </figure>
