cleaned up cards page

--- a/gr-analysis.html
+++ b/gr-analysis.html
@@ -23,7 +23,7 @@
         <div class="columns">
 
             <!-- GR122 -->
-            <div class="column is-3">
+            <div class="column">
                 <div class="card">
                     <header class="card-header has-background-primary">
                         <p
@@ -36,7 +36,12 @@
                         <figure class="image mb-4">
                             <img src="images/gr122_highlight.jpg" alt="">
                         </figure>
-                        <div class="content is-small">
+                        <footer class="card-footer has-background-light mb-4">
+                            <button class="button is-link is-outlined is-fullwidth"
+                                onclick="window.location.href='gr122_overview.html';">Click here to view the route
+                                analysis</button>
+                        </footer>
+                        <!-- <div class="content is-small">
                             <p>De GR 122 start in Hulst en laat je kennis maken met de uitgestrekte polderlandschappen
                                 van Zeeuws-Vlaanderen. De fortenlinies onderweg zijn stille getuigen van de 80-jarige
                                 oorlog. Je steekt na 25 km de grens over en stapt in Moerbeke het Zoete Waasland van
@@ -52,17 +57,13 @@
                                 122 opnieuw zijn eigen traject. Het steekt de grens over nabij Bon-Secours om via
                                 Valenciennes, de vestingstad Le Quesnoy, het Bos van Mormal, de Avesnois en de Franse
                                 Ardennen na 470 km aansluiting te zoeken bij de GR 12 nabij Son.</p>
-                        </div>
+                        </div> -->
                     </div>
-                    <!-- <footer class="card-footer has-background-light"> -->
-                    <button class="button is-link is-outlined is-fullwidth"
-                        onclick="window.location.href='gr122_overview.html';">Click here for route analysis</button>
-                    <!-- </footer> -->
                 </div>
             </div>
 
             <!-- GR131 -->
-            <div class="column is-3">
+            <div class="column">
                 <div class="card">
                     <header class="card-header has-background-primary">
                         <p
@@ -75,7 +76,12 @@
                         <figure class="image mb-4">
                             <img src="images/gr131_highlight.jpg" alt="">
                         </figure>
-                        <div class="content is-small">
+                        <footer class="card-footer has-background-light mb-4">
+                            <button class="button is-link is-outlined is-fullwidth"
+                                onclick="window.location.href='gr131_overview.html';">Click here to view the route
+                                analysis</button>
+                        </footer>
+                        <!-- <div class="content is-small">
                             <p>De GR 131 start in het oude Zwinstadje Damme en loopt diagonaal door de provincie
                                 West-Vlaanderen naar de Ieperboog. Het pad verbindt de GR 5A in het noorden van de
                                 provincie met de GR 128 in het zuiden. De route omvat 3 delen: het Brugse Ommeland, het
@@ -90,17 +96,14 @@
                                 het Molenbos sluit de GR 131 aan op de GR 128. Met een verbinding naar het station van
                                 Ieper krijg je nog een mooi stuk doorheen het provinciedomein cadeau.
                             </p>
-                        </div>
+                        </div> -->
                     </div>
-                    <footer class="card-footer has-background-light">
-                        <button class="button is-link is-outlined is-fullwidth"
-                            onclick="window.location.href='gr131_overview.html';">Click here for route analysis</button>
-                    </footer>
+
                 </div>
             </div>
 
             <!-- GR564 -->
-            <div class="column is-3">
+            <div class="column">
                 <div class="card">
                     <header class="card-header has-background-primary">
                         <p
@@ -113,7 +116,12 @@
                         <figure class="image mb-4">
                             <img src="images/gr564_highlight.jpg" alt="">
                         </figure>
-                        <div class="content is-small">
+                        <footer class="card-footer has-background-light mb-4">
+                            <button class="button is-link is-outlined is-fullwidth"
+                                onclick="window.location.href='gr564_overview.html';">Click here to view the route
+                                analysis</button>
+                        </footer>
+                        <!-- <div class="content is-small">
                             <p>De GR 564 is afwisseling en contrast. Duinen en vennen, zand en water, heide en bos.
                                 Natte beemden, fruitplantages en maïs, grote vierkanthoeven en kleine dorpen met spitse
                                 kerktorens. In Haspengouw word je telkens verrast door weidse vergezichten. Je steekt de
@@ -141,12 +149,9 @@
                                 kasteel. Je tocht eindigt in Huy aan de oevers van de Maas en aan de grens van de
                                 Condroz, waar de route aansluit op de GR 576.
                             </p>
-                        </div>
+                        </div> -->
                     </div>
-                    <footer class="card-footer has-background-light">
-                        <button class="button is-link is-outlined is-fullwidth"
-                            onclick="window.location.href='gr564_overview.html';">Click here for route analysis</button>
-                    </footer>
+
                 </div>
             </div>
 
