final cleanup of analysis page

--- a/gr122_overview.html
+++ b/gr122_overview.html
@@ -10,10 +10,17 @@
 </head>
 
 <body>
+
     <section class="section">
         <div class="columns">
             <div class="column is-6-fullhd        is-8-widescreen        is-8-desktop        is-10-tablet         is-12-mobile
                                is-offset-3-fullhd is-offset-2-widescreen is-offset-2-desktop is-offset-1-tablet">
+
+                <!-- Home button -->
+                <div class="has-text-centered mb-4">
+                    <button class="button is-link is-outlined" onclick="window.location.href='gr-analysis.html';">
+                        Return to overview page</button>
+                </div>
 
                 <!-- Title -->
                 <h1 class="title has-text-centered
