--- a/gr-analysis.html
+++ b/gr-analysis.html
@@ -20,15 +20,15 @@
             Analysis of GR routes
         </h1>
 
-        <div class="columns">
+        <div class="columns is-centered">
 
             <!-- GR122 -->
-            <div class="column">
+            <div class="column is-3-fullhd is-3-widescreen is-4-desktop is-4-tablet is-12-mobile is-centered">
                 <div class="card">
                     <header class="card-header has-background-primary">
                         <p
                             class="card-header-title is-centered has-text-primary-light
-                                is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                                is-size-4-fullhd is-size-5-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                             GR122 (Hulst - Ronse)
                         </p>
                     </header>
@@ -38,37 +38,19 @@
                         </figure>
                         <footer class="card-footer has-background-light mb-4">
                             <button class="button is-link is-outlined is-fullwidth"
-                                onclick="window.location.href='gr122_overview.html';">Click here to view the route
-                                analysis</button>
+                                onclick="window.location.href='gr122_overview.html';">View route analysis</button>
                         </footer>
-                        <!-- <div class="content is-small">
-                            <p>De GR 122 start in Hulst en laat je kennis maken met de uitgestrekte polderlandschappen
-                                van Zeeuws-Vlaanderen. De fortenlinies onderweg zijn stille getuigen van de 80-jarige
-                                oorlog. Je steekt na 25 km de grens over en stapt in Moerbeke het Zoete Waasland van
-                                Reynaert de Vos binnen. Tussen bolle akkers leidt de Moervaart je van Lokeren naar
-                                Lochristi. Azalea- en begoniavelden toveren kleurrijke dekens op de velden in deze
-                                Bloemenstreek. In Laarne krijg je het gezelschap van de GR 128. Vanaf Wetteren brengt de
-                                Schelde je verder westwaarts naar Melle en Merelbeke. Het zacht-heuvelende Land van Rode
-                                is een prelude tot de Zwalmstreek, waar wind- en watermolens getuigen van het verleden.
-                                Je volgt het schilderachtige riviertje stroomopwaarts naar de bronbossen in Brakel. De
-                                heuvels van de Vlaamse Ardennen liggen op jouw pad en schenken je de mooiste panorama's.
-                                Je doorkruist het Brakelbos, Muziekbos en tenslotte het Kluisbos. Hier sluit de GR 122
-                                aan op de GRP 123 Tour de la Wallonie picarde. Vanaf het Waalse Bernissart kiest de GR
-                                122 opnieuw zijn eigen traject. Het steekt de grens over nabij Bon-Secours om via
-                                Valenciennes, de vestingstad Le Quesnoy, het Bos van Mormal, de Avesnois en de Franse
-                                Ardennen na 470 km aansluiting te zoeken bij de GR 12 nabij Son.</p>
-                        </div> -->
                     </div>
                 </div>
             </div>
 
             <!-- GR131 -->
-            <div class="column">
+            <div class="column is-3-fullhd is-3-widescreen is-4-desktop is-4-tablet is-12-mobile">
                 <div class="card">
                     <header class="card-header has-background-primary">
                         <p
                             class="card-header-title is-centered has-text-primary-light
-                                is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                                is-size-4-fullhd is-size-5-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                             GR131 (Damme - Ieper)
                         </p>
                     </header>
@@ -78,37 +60,20 @@
                         </figure>
                         <footer class="card-footer has-background-light mb-4">
                             <button class="button is-link is-outlined is-fullwidth"
-                                onclick="window.location.href='gr131_overview.html';">Click here to view the route
-                                analysis</button>
+                                onclick="window.location.href='gr131_overview.html';">View route analysis</button>
                         </footer>
-                        <!-- <div class="content is-small">
-                            <p>De GR 131 start in het oude Zwinstadje Damme en loopt diagonaal door de provincie
-                                West-Vlaanderen naar de Ieperboog. Het pad verbindt de GR 5A in het noorden van de
-                                provincie met de GR 128 in het zuiden. De route omvat 3 delen: het Brugse Ommeland, het
-                                Houtland, en de IJzervallei met de
-                                Ieperboog. In de eerste twee delen zijn groen gekleurd door de bossen, laatste deel
-                                blauw door het water. Het hele traject ademt een rijke en boeiende geschiedenis uit.
-                                Damme is de geschiedenis zelf. Talrijke kastelen wijzen op de rijkdom van het Brugse
-                                Ommeland. Groengebieden volgen elkaar in snel tempo op: Bulskampveld, Blauwhuis,
-                                Groenhove, Wijnendalebos, Staatsbossen van Koekelare. Vanaf hier eist de ‘Groote Oorlog’
-                                alle aandacht op: Vladslo, IJzertoren, Steenstrate, Essex Farm Cemetery, Menenpoort.Dan
-                                is het nog een kleine stap naar het Provinciedomein De Palingbeek in Zillebeke: hier in
-                                het Molenbos sluit de GR 131 aan op de GR 128. Met een verbinding naar het station van
-                                Ieper krijg je nog een mooi stuk doorheen het provinciedomein cadeau.
-                            </p>
-                        </div> -->
                     </div>
 
                 </div>
             </div>
 
             <!-- GR564 -->
-            <div class="column">
+            <div class="column is-3-fullhd is-3-widescreen is-4-desktop is-4-tablet is-12-mobile">
                 <div class="card">
                     <header class="card-header has-background-primary">
                         <p
                             class="card-header-title is-centered has-text-primary-light
-                                is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                                is-size-4-fullhd is-size-5-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                             GR564 (Lommel - Huy)
                         </p>
                     </header>
@@ -118,38 +83,8 @@
                         </figure>
                         <footer class="card-footer has-background-light mb-4">
                             <button class="button is-link is-outlined is-fullwidth"
-                                onclick="window.location.href='gr564_overview.html';">Click here to view the route
-                                analysis</button>
+                                onclick="window.location.href='gr564_overview.html';">View route analysis</button>
                         </footer>
-                        <!-- <div class="content is-small">
-                            <p>De GR 564 is afwisseling en contrast. Duinen en vennen, zand en water, heide en bos.
-                                Natte beemden, fruitplantages en maïs, grote vierkanthoeven en kleine dorpen met spitse
-                                kerktorens. In Haspengouw word je telkens verrast door weidse vergezichten. Je steekt de
-                                taalgrens over en duikt de vallei van de Mehaigne in met hoogtes en laagtes, kastelen en
-                                oude dorpen.
-
-                                In het eerste deel van je tocht ontdek je de zanderige heuvels van de Limburgse Kempen.
-                                Door bossen en natuurreservaten, langs vennen en vijvers gaat de route zuidwaarts. Eerst
-                                door de natuurgebieden Terhaagdoornheide en De Teut, wat verder langs de domeinen van
-                                Kelchterhoef en Hengelhoef om aan te komen in Bokrijk. Bij Diepenbeek steek je het
-                                Albertkanaal over.
-                                Dan verandert het landschap. Je trekt eerst door de vochtige Demervallei en vanaf
-                                Kortessem wandel je door Limburgs Haspengouw. Je doorkruist een rijke streek met grotere
-                                landbouwbedrijven, vierkantshoeven, graan en bieten en steeds meer fruitplantages, die
-                                in de lente hun bloesems ten toon spreiden. Borgloon was de historische hoofdstad van
-                                het Graafschap Loon en noemt zich de ‘Parel van Haspengouw’ en dat laat zich zien. Hier
-                                en daar word je tussen de vergezichten verrast door een spitse kerktoren van een oude
-                                soms bijna ingeslapen dorpskern. Voorbij Landen steek je de taalgrens over en kom je
-                                eerst in de streek die vele eeuwen geleden het kerngebied was van de Merovingische
-                                hofmeiers.
-                                In het laatste deel verandert het landschap aanvankelijk weinig. Je blijft nog even in
-                                Haspengouw, met oude dorpjes en weidse vergezichten. Je loopt door Hannut en Avennes,
-                                waar je de vallei van de Mehaigne bereikt. Nu ga je klimmen en dalen: vochtige
-                                valleitjes met bossen en moerassen, akkers op de hoogtes en hier en daar een imposant
-                                kasteel. Je tocht eindigt in Huy aan de oevers van de Maas en aan de grens van de
-                                Condroz, waar de route aansluit op de GR 576.
-                            </p>
-                        </div> -->
                     </div>
 
                 </div>
