added intro text & return buttons

--- a/gr-analysis.html
+++ b/gr-analysis.html
@@ -21,6 +21,15 @@
         </h1>
 
         <div class="columns is-centered">
+            <div class="column is-6-fullhd is-6-widescreen is-12-desktop is-12-tablet is-12-mobile">
+                This page contains the results of the <b>gr-analysis</b> project, which performs quality analysis of
+                long-distance hiking trails in Flanders (Belgium). For more information about the project (methodology
+                and code), visit <a href="https://github.com/svanwal/gr-analysis" target="blank">the GitHub
+                    repository</a>.
+            </div>
+        </div>
+
+        <div class="columns is-centered">
 
             <!-- GR122 -->
             <div class="column is-3-fullhd is-3-widescreen is-4-desktop is-4-tablet is-12-mobile is-centered">
