--- a/gr122_overview.html
+++ b/gr122_overview.html
@@ -57,9 +57,15 @@
                 <h2 class="title has-text-centered
                            is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                     Section plots of the route</h2>
-                <figure class="image">
+                <figure class="image mb-4">
                     <img src="images/gr122_sections.jpg" alt="">
                 </figure>
+
+                <!-- Home button -->
+                <div class="has-text-centered mb-4">
+                    <button class="button is-link is-outlined" onclick="window.location.href='gr-analysis.html';">
+                        Return to overview page</button>
+                </div>
 
             </div>
         </div>
