added summary statistics

--- a/gr122_overview.html
+++ b/gr122_overview.html
@@ -28,6 +28,11 @@
                     GR122 (Hulst - Ronse)
                 </h1>
 
+                <!-- Statistics plot -->
+                <figure class="image mb-5">
+                    <img src="images/gr122_stats.png" alt="">
+                </figure>
+
                 <!-- Paved type -->
                 <h2 class="title has-text-centered
                            is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
