updated figures and maps

--- a/gr131_overview.html
+++ b/gr131_overview.html
@@ -62,7 +62,7 @@
                            is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                     Section plots of the route</h2>
                 <figure class="image mb-4">
-                    <img src="images/gr131_sections.jpg" alt="">
+                    <img src="images/gr131_sections.png" alt="">
                 </figure>
 
                 <!-- Home button -->
