updated figures & maps

--- a/gr122_overview.html
+++ b/gr122_overview.html
@@ -33,6 +33,14 @@
                     <img src="images/gr122_stats.png" alt="">
                 </figure>
 
+                <!-- Tracks -->
+                <h2 class="title has-text-centered
+                           is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                    GPX Track (red) vs. matched roads (black)</h2>
+                <figure class="image is-16by9 mb-4">
+                    <iframe class="has-ratio" src="maps/gr122_tracks.html" title="Paved type of GR122"></iframe>
+                </figure>
+
                 <!-- Paved type -->
                 <h2 class="title has-text-centered
                            is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
@@ -54,7 +62,7 @@
                            is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                     Development type along the route (light/heavy)</h2>
                 <figure class="image is-16by9 mb-4">
-                    <iframe class="has-ratio" src="maps/gr122_development.html"
+                    <iframe class="has-ratio" src="maps/gr122_development_smoothed.html"
                         title="Development type of GR122"></iframe>
                 </figure>
 
