--- a/gr131_overview.html
+++ b/gr131_overview.html
@@ -32,6 +32,14 @@
                     <img src="images/gr131_stats.png" alt="">
                 </figure>
 
+                <!-- Tracks -->
+                <h2 class="title has-text-centered
+                is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                    GPX Track (red) vs. matched roads (black)</h2>
+                <figure class="image is-16by9 mb-4">
+                    <iframe class="has-ratio" src="maps/gr131_tracks.html" title="Paved type of GR122"></iframe>
+                </figure>
+
                 <!-- Paved type -->
                 <h2 class="title has-text-centered
                            is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
@@ -53,7 +61,7 @@
                            is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                     Development type along the route (light/heavy)</h2>
                 <figure class="image is-16by9 mb-4">
-                    <iframe class="has-ratio" src="maps/gr131_development.html"
+                    <iframe class="has-ratio" src="maps/gr131_development_smoothed.html"
                         title="Development type of GR131"></iframe>
                 </figure>
 
