--- a/skyhud/skyhud.html
+++ b/skyhud/skyhud.html
@@ -12,7 +12,7 @@
 <body>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia maxime quis voluptate. Quo nulla officiis sit
         atque iste expedita vitae suscipit laudantium dolores repellat iure nihil quas soluta, nemo odio!</p>
-    <button id="bouton">You clicked 0 times</button>
+    <button id="bouton">Click here to start</button>
     <p id="text_alpha">The alpha angle is NaN deg</p>
     <p id="text_beta">The beta angle is NaN deg</p>
     <p id="text_gamma">The gamma angle is NaN deg</p>
