--- a/skyhud/skyhud.html
+++ b/skyhud/skyhud.html
@@ -10,56 +10,40 @@
 </head>
 
 <body>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia maxime quis voluptate. Quo nulla officiis sit
-        atque iste expedita vitae suscipit laudantium dolores repellat iure nihil quas soluta, nemo odio!</p>
-    <button id="bouton">Click here to start</button>
+
+    <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia maxime quis voluptate. Quo nulla officiis sit
+        atque iste expedita vitae suscipit laudantium dolores repellat iure nihil quas soluta, nemo odio!</p> -->
+    <!-- <button id="bouton">Click here to start</button>
     <p id="text_alpha">The alpha angle is NaN deg</p>
     <p id="text_beta">The beta angle is NaN deg</p>
-    <p id="text_gamma">The gamma angle is NaN deg</p>
-    <!-- <section class="section">
-        <div class="container">
-            <div class="columns">
-                <div class="column is-half is-offset-one-quarter">
-                    <div class="card">
-                        <div class="card-image">
-                            <figure class="image is-2by1">
-                                <img src="https://images.unsplash.com/photo-1534158914592-062992fbe900?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3784&q=80"
-                                    alt="">
-                            </figure>
-                        </div>
-                        <header class="card-header">
-                            <p class="card-header-title">
-                                Ping Pong Score Keeper
-                            </p>
-                        </header>
-                        <div class="card-content">
-                            <div class="content">
-                                <h1 class="title is-1"><span id="scoreOne">0</span> to <span id="scoreTwo">0</span></h1>
-                                <p class="subtitle">Use the buttons below to keep score.</p>
-                                <label for="scoreMax" class="label is-large is-inline">Playing to: </label>
-                                <div class="select is-rounded">
-                                    <select id="scoreMax">
-                                        <option value="5" selected>5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                        <option value="9">9</option>
-                                        <option value="10">10</option>
-                                        <option value="11">11</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-                        <footer class="card-footer">
-                            <button class="is-primary button card-footer-item" id="buttOne">+1 Player One</button>
-                            <button class="is-info button card-footer-item" id="buttTwo">+1 Player Two</button>
-                            <button class="is-danger button card-footer-item" id="buttReset">Reset</button>
-                        </footer>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
+    <p id="text_gamma">The gamma angle is NaN deg</p> -->
+
+    <h1>Device Orientation API Mobile Demo</h1>
+    <div><button id="button">Request Permission to Access Device Orientation Data</button></div>
+    <div>
+        <h4>Alpha:</h4>
+        <p id="alpha"></p>
+    </div>
+    <div>
+        <h4>Beta:</h4>
+        <p id="beta"></p>
+    </div>
+    <div>
+        <h4>Gamma:</h4>
+        <p id="gamma"></p>
+    </div>
+
+    <hr>
+    <hr>
+
+    <!-- <h1>Orientation using chrome dev tools (FOR DESKTOP)</h1>
+    <p>To simulate the device orientation we can make use of the chrome dev tool in-built device orientation sensor and
+        simulates in different angles such as portrait, landscape, etc.
+        To Open the simulator on desktop first open the developer's console the press Command+Shift+P (Mac) or
+        Ctrl+Shift+P (Windows or Linux) to open the command menu. Type "sensors" and select show sensors.
+        Then from the Orientation list select the custom orientation option.</p>
+    <img src="https://arunmichaeldsouza.com/img/blogs/web-platform's-hidden-gems---device-orientation-api/8.gif" /> -->
+
     <script src="skyhud.js"></script>
 </body>
 
