rotate horizon line

--- a/skyhud/skyhud.html
+++ b/skyhud/skyhud.html
@@ -33,8 +33,7 @@
         <p id="gamma"></p>
     </div>
 
-    <hr>
-    <hr>
+    <hr id="horizon">
 
     <!-- <h1>Orientation using chrome dev tools (FOR DESKTOP)</h1>
     <p>To simulate the device orientation we can make use of the chrome dev tool in-built device orientation sensor and
