added gr type maps

--- a/gr564_overview.html
+++ b/gr564_overview.html
@@ -65,6 +65,15 @@
                         title="Development type of GR564"></iframe>
                 </figure>
 
+                <!-- GR type -->
+                <h2 class="title has-text-centered
+                           is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                    GR type along the route (1-6)</h2>
+                <figure class="image is-16by9 mb-4">
+                    <iframe class="has-ratio" src="maps/gr564_type_detail.html"
+                        title="Development type of GR564"></iframe>
+                </figure>
+
                 <!-- Section plots -->
                 <h2 class="title has-text-centered
                            is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
