--- a/gr131_overview.html
+++ b/gr131_overview.html
@@ -56,12 +56,21 @@
                     <iframe class="has-ratio" src="maps/gr131_traffic.html" title="Traffic type of GR131"></iframe>
                 </figure>
 
-                <!-- Development type type -->
+                <!-- Development type -->
                 <h2 class="title has-text-centered
                            is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                     Development type along the route (light/heavy)</h2>
                 <figure class="image is-16by9 mb-4">
                     <iframe class="has-ratio" src="maps/gr131_development_smoothed.html"
+                        title="Development type of GR131"></iframe>
+                </figure>
+
+                <!-- GR type -->
+                <h2 class="title has-text-centered
+                           is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                    GR type along the route (1-6)</h2>
+                <figure class="image is-16by9 mb-4">
+                    <iframe class="has-ratio" src="maps/gr131_type_detail.html"
                         title="Development type of GR131"></iframe>
                 </figure>
 
