updated maps and added percentages

--- a/gr122_overview.html
+++ b/gr122_overview.html
@@ -28,6 +28,16 @@
                     GR122 (Hulst - Ronse)
                 </h1>
 
+                <!-- GR Type percentages -->
+                <ul class="mb-2">
+                    <li>GR type 1 coverage: 41% (onverhard, geen intensieve bebouwing)</li>
+                    <li>GR type 2 coverage: 8% (onverhard, intensieve bebouwing)</li>
+                    <li>GR type 3 coverage: 3% (intensief verkeer)</li>
+                    <li>GR type 4 coverage: 10% (verhard, zonder verkeer)</li>
+                    <li>GR type 5 coverage: 12% (verhard, intensieve bebouwing)</li>
+                    <li>GR type 6 coverage: 26% (verhard, geen intensieve bebouwing)</li>
+                </ul>
+
                 <!-- Statistics plot -->
                 <figure class="image mb-5">
                     <img src="images/gr122_stats.png" alt="">
@@ -54,7 +64,8 @@
                            is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                     Traffic type along the route (slow/normal/busy)</h2>
                 <figure class="image is-16by9 mb-4">
-                    <iframe class="has-ratio" src="maps/gr122_traffic.html" title="Traffic type of GR122"></iframe>
+                    <iframe class="has-ratio" src="maps/gr122_traffic_detail.html"
+                        title="Traffic type of GR122"></iframe>
                 </figure>
 
                 <!-- Development type -->
