--- a/gr131_overview.html
+++ b/gr131_overview.html
@@ -27,6 +27,16 @@
                     GR131 (Damme - Ieper)
                 </h1>
 
+                <!-- GR Type percentages -->
+                <ul class="mb-2">
+                    <li>GR type 1 coverage: 31% (onverhard, geen intensieve bebouwing)</li>
+                    <li>GR type 2 coverage: 5% (onverhard, intensieve bebouwing)</li>
+                    <li>GR type 3 coverage: 4% (intensief verkeer)</li>
+                    <li>GR type 4 coverage: 2% (verhard, zonder verkeer)</li>
+                    <li>GR type 5 coverage: 11% (verhard, intensieve bebouwing)</li>
+                    <li>GR type 6 coverage: 47% (verhard, geen intensieve bebouwing)</li>
+                </ul>
+
                 <!-- Statistics plot -->
                 <figure class="image mb-5">
                     <img src="images/gr131_stats.png" alt="">
@@ -53,7 +63,8 @@
                            is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                     Traffic type along the route (slow/normal/busy)</h2>
                 <figure class="image is-16by9 mb-4">
-                    <iframe class="has-ratio" src="maps/gr131_traffic.html" title="Traffic type of GR131"></iframe>
+                    <iframe class="has-ratio" src="maps/gr131_traffic_detail.html"
+                        title="Traffic type of GR131"></iframe>
                 </figure>
 
                 <!-- Development type -->
