--- a/gr564_overview.html
+++ b/gr564_overview.html
@@ -27,6 +27,16 @@
                     GR564 (Lommel - Huy)
                 </h1>
 
+                <!-- GR Type percentages -->
+                <ul class="mb-2">
+                    <li>GR type 1 coverage: 36% (onverhard, geen intensieve bebouwing)</li>
+                    <li>GR type 2 coverage: 11% (onverhard, intensieve bebouwing)</li>
+                    <li>GR type 3 coverage: 9% (intensief verkeer)</li>
+                    <li>GR type 4 coverage: 2% (verhard, zonder verkeer)</li>
+                    <li>GR type 5 coverage: 20% (verhard, intensieve bebouwing)</li>
+                    <li>GR type 6 coverage: 22% (verhard, geen intensieve bebouwing)</li>
+                </ul>
+
                 <!-- Statistics plot -->
                 <figure class="image mb-5">
                     <img src="images/gr564_stats.png" alt="">
@@ -53,7 +63,8 @@
                            is-size-4-fullhd is-size-4-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
                     Traffic type along the route (slow/normal/busy)</h2>
                 <figure class="image is-16by9 mb-4">
-                    <iframe class="has-ratio" src="maps/gr564_traffic.html" title="Traffic type of GR564"></iframe>
+                    <iframe class="has-ratio" src="maps/gr564_traffic_detail.html"
+                        title="Traffic type of GR564"></iframe>
                 </figure>
 
                 <!-- Development type type -->
