--- a/gr-analysis.html
+++ b/gr-analysis.html
@@ -32,7 +32,7 @@
         <div class="columns is-centered">
 
             <!-- GR122 -->
-            <div class="column is-3-fullhd is-3-widescreen is-4-desktop is-4-tablet is-12-mobile is-centered">
+            <div class="column is-4-fullhd is-4-widescreen is-6-desktop is-6-tablet is-12-mobile is-centered">
                 <div class="card">
                     <header class="card-header has-background-primary">
                         <p
@@ -54,7 +54,7 @@
             </div>
 
             <!-- GR131 -->
-            <div class="column is-3-fullhd is-3-widescreen is-4-desktop is-4-tablet is-12-mobile">
+            <div class="column is-4-fullhd is-4-widescreen is-6-desktop is-6-tablet is-12-mobile">
                 <div class="card">
                     <header class="card-header has-background-primary">
                         <p
@@ -72,12 +72,15 @@
                                 onclick="window.location.href='gr131_overview.html';">View route analysis</button>
                         </footer>
                     </div>
-
                 </div>
             </div>
 
+        </div>
+
+        <div class="columns is-centered">
+
             <!-- GR564 -->
-            <div class="column is-3-fullhd is-3-widescreen is-4-desktop is-4-tablet is-12-mobile">
+            <div class="column is-4-fullhd is-4-widescreen is-6-desktop is-6-tablet is-12-mobile">
                 <div class="card">
                     <header class="card-header has-background-primary">
                         <p
@@ -95,7 +98,28 @@
                                 onclick="window.location.href='gr564_overview.html';">View route analysis</button>
                         </footer>
                     </div>
+                </div>
+            </div>
 
+            <!-- Bosland -->
+            <div class="column is-4-fullhd is-4-widescreen is-6-desktop is-6-tablet is-12-mobile">
+                <div class="card">
+                    <header class="card-header has-background-primary">
+                        <p
+                            class="card-header-title is-centered has-text-primary-light
+                                is-size-4-fullhd is-size-5-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                            Bosland
+                        </p>
+                    </header>
+                    <div class="card-content">
+                        <figure class="image mb-4">
+                            <img src="images/bosland_highlight.jpg" alt="">
+                        </figure>
+                        <footer class="card-footer has-background-light mb-4">
+                            <button class="button is-link is-outlined is-fullwidth"
+                                onclick="window.location.href='bosland_overview.html';">View route analysis</button>
+                        </footer>
+                    </div>
                 </div>
             </div>
 
