ask for persmission

--- a/skyhud2.html
+++ b/skyhud2.html
@@ -18,6 +18,25 @@
 <body>
     <canvas id="augmented-reality"></canvas>
     <script>
+
+        function onClick() {
+            if (typeof DeviceMotionEvent.requestPermission === 'function') {
+                // Handle iOS 13+ devices.
+                DeviceMotionEvent.requestPermission()
+                    .then((state) => {
+                        if (state === 'granted') {
+                            window.addEventListener('devicemotion', handleOrientation);
+                        } else {
+                            console.error('Request to access the orientation was rejected');
+                        }
+                    })
+                    .catch(console.error);
+            } else {
+                // Handle regular non iOS 13+ devices.
+                window.addEventListener('devicemotion', handleOrientation);
+            }
+        }
+
         const canvas = document.getElementById("augmented-reality");
         const ctx = canvas.getContext("2d");
 
