--- a/skyhud2.html
+++ b/skyhud2.html
@@ -17,6 +17,7 @@
 
 <body>
     <canvas id="augmented-reality"></canvas>
+    <button id="permission-button">Request Permission</button>
     <script>
 
         function onClick() {
